[tool.poetry]
name = "pong-game"
version = "0.1.0"
description = ""
authors = ["Zarif Aziz <zarif.aziz@faethm.ai>"]
readme = "README.md"
packages = [{include = "pong_game"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
